--- a/Day7/Day7.csproj
+++ b/Day7/Day7.csproj
@@ -19,6 +19,9 @@
     <None Update="inputtestsample.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="inputtestsample2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
