Finish Day 7 finally

--- a/Day7/Day7.csproj
+++ b/Day7/Day7.csproj
@@ -22,6 +22,9 @@
     <None Update="inputtestsample2.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="inputtestsample3.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
