--- a/Day13/Day13.csproj
+++ b/Day13/Day13.csproj
@@ -6,6 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="inputtest2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="inputtest.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
