--- a/Day14/Day14.csproj
+++ b/Day14/Day14.csproj
@@ -6,6 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="inputtest.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
