code optimizations 10m operation in 17s

--- a/Day13/Day13.csproj
+++ b/Day13/Day13.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Update="inputtest6.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
